# DeepCAD

./: .gitignore  LICENSE  README.md  environment.yml  pc2cad.py  pc2cad_train.py  pyproject.toml  requirements.txt  test.py  train.py  virtual-packages.yml
cadlib/: curves.py  extrude.py  math_utils.py  sketch.py  visualize.py
config/: __init__.py  configAE.py  configLGAN.py
dataset/: cad_dataset.py  json2pc.py  json2vec.py  lgan_dataset.py
deepcad/cadlib/: curves.py  extrude.py  macro.py  sketch.py  visualize.py
deepcad/config/: configAE.py  configLGAN.py
deepcad/dataset/: cad_dataset.py  json2pc.py  json2vec.py
deepcad/evaluation/: collect_gen_pc.py  evaluate_ae_acc.py  evaluate_ae_cd.py  evaluate_gen_torch.py  run_eval_gen.sh
deepcad/model/: autoencoder.py  latentGAN.py  model_utils.py
deepcad/trainer/: base.py  loss.py  trainerAE.py  trainerLGAN.py
deepcad/utils/: export2step.py  file_utils.py  pc_utils.py
evaluation/: collect_gen_pc.py  evaluate_ae_acc.py  evaluate_ae_cd.py  evaluate_gen_torch.py
model/: __init__.py  autoencoder.py  model_utils.py
notebooks/: development.ipynb
scripts/: lgan.py
trainer/: __init__.py  loss.py  trainerAE.py  trainerLGAN.py
utils/: __init__.py  export2step.py  file_utils.py  show.py
